name:                services
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/seanhess/services#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Hess
maintainer:          seanhess@gmail.com
copyright:           Orbital Labs
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Control.Log
      Network.Wai.Middleware.JsonErrors
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , binary
    , bytestring
    , http-types
    , monad-logger
    , text
    , wai

  default-language:    Haskell2010

test-suite services-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , services
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/seanhess/services
